add_subdirectory(src)

set (sdfs
  1_3.convert
  actor.sdf
  audio_source.sdf
  audio_sink.sdf
  box.sdf
  camera.sdf
  collision.sdf
  contact.sdf
  cylinder.sdf
  force_torque.sdf
  geometry.sdf
  gps.sdf
  gripper.sdf
  gui.sdf
  heightmap.sdf
  image.sdf
  imu.sdf
  inertial.sdf
  joint.sdf
  light.sdf
  link.sdf
  mesh.sdf
  model.sdf
  noise.sdf
  physics.sdf
  plane.sdf
  plugin.sdf
  projector.sdf
  ray.sdf
  rfidtag.sdf
  rfid.sdf
  road.sdf
  root.sdf
  scene.sdf
  sensor.sdf
  spherical_coordinates.sdf
  sphere.sdf
  sonar.sdf
  state.sdf
  surface.sdf
  transceiver.sdf
  visual.sdf
  world.sdf
)

install(FILES ${sdfs} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/sdformat/1.4)
